--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,6 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+.aws/config
+.aws/credentials
+password.txt
