--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,5 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-.aws/config
-.aws/credentials
-password.txt
 .env
+.aws
